--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -250,9 +250,6 @@
   <data name="orange_control_22" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\orange_control_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="disclogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\disclogo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Yarin_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\yarin-bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -270,5 +267,8 @@
   </data>
   <data name="greendot" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\greendot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="log" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\log.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
